sort the results based on the hit count

--- a/log_house/templates/loghouse/ajax/uris.html
+++ b/log_house/templates/loghouse/ajax/uris.html
@@ -11,7 +11,7 @@
         {% endfor %}
         </tr>
     </thead>
-    {% for row in couchdbview %}
+    {% for row in couchdbview|dictsortreversed:"value" %}
     <tr>
         <td>{{ row.value }}</td>
         <td>{{ row.payload }}</td>
