--- a/log_house/templates/loghouse/layout.html
+++ b/log_house/templates/loghouse/layout.html
@@ -34,11 +34,11 @@
 <div class="span-3 colborder">
 
 <div id="shortcuts">
-<h3 class="caps">shortcuts</h3>
+<h3 class="caps">navigation</h3>
 
 <div class="prepend-1">
 <p>
-<a href="/">home</a><br/>
+<a href="{% url index %}">index</a><br/>
 </p>
 </div>
 
@@ -50,6 +50,10 @@
 </div>
 
 <div id="content" class="span-19 last">
+<div id="codes"></div>
+<div id="uri"></div>
+<div id="referrer"></div>
+<div id="agents"></div>
 {% block content %}
 {% endblock %}
 </div>
