--- a/log_house/templates/loghouse/layout.html
+++ b/log_house/templates/loghouse/layout.html
@@ -10,12 +10,14 @@
     <link rel="stylesheet" href="{{MEDIA_URL}}css/screen.css" type="text/css" media="screen, projection" />
     <link rel="stylesheet" href="{{MEDIA_URL}}css/print.css" type="text/css" media="print" />
     <!--[if IE]><link rel="stylesheet" href="{{MEDIA_URL}}css/ie.css" type="text/css" media="screen, projection"><![endif]-->
-    {% block syndication %}
-    <link rel="alternate" type="application/rss+xml" title="RSS" href="/feeds/blog/" />
-    {% endblock %}
+
     <link rel="stylesheet" href="{{MEDIA_URL}}css/loghouse.css" type="text/css" media="screen, projection" />
-    <script language="JavaScript" type="text/javascript" src="{{MEDIA_URL}}js/jquery.js"></script>
-    <script language="JavaScript" type="text/javascript" src="{{MEDIA_URL}}js/jquery.tablesorter.js"></script>
+
+    {% comment %} jquery and jquery.visualize {% endcomment %}
+    <script language="JavaScript" type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+    <script language="JavaScript" type="text/javascript" src="{{MEDIA_URL}}js/visualize.jQuery.js"></script>
+    <!--[if IE]><script type="text/javascript" src="excanvas.compiled.js"></script><![endif]-->
+    <link rel="stylesheet" href="{{MEDIA_URL}}css/visualize.jQuery.css" type="text/css" />
 {% block header %}
 {% endblock %}
 </head>
@@ -50,10 +52,10 @@
 </div>
 
 <div id="content" class="span-19 last">
-<div id="codes"></div>
-<div id="uri"></div>
-<div id="referrer"></div>
-<div id="agents"></div>
+<div id="codes" class="span-19 last"></div>
+<div id="uri" class="span-19 last"></div>
+<div id="referrer" class="span-19 last"></div>
+<div id="agents" class="span-19 last"></div>
 {% block content %}
 {% endblock %}
 </div>
